--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1082,6 +1082,7 @@
 "settings-storage-and-syncing-show-default-reading-list-footer-text" = "Show the Saved (eg. default) reading list as a separate list in your reading lists view. This list appears on Android devices.";
 "settings-storage-and-syncing-show-default-reading-list-title" = "Show Saved reading list";
 "settings-storage-and-syncing-title" = "Article storage and syncing";
+"settings-temp-account-title" = "Temporary account";
 "settings-title" = "Settings";
 "settings-year-in-review-header" = "Turning off Year in Review will clear all stored personalized insights and hide the Year in Review.";
 "share-a-fact-made-with" = "Made with the Wikipedia app";
