--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1194,6 +1194,7 @@
 "talk-pages-user-groups" = "Title for menu option for information on the user's user groups. Please prioritize for de, ar and zh wikis.";
 "talk-pages-user-logs" = "Title for menu option to consult the user's public logs. Please prioritize for de, ar and zh wikis.";
 "talk-pages-view-title" = "Title of user and article talk pages view. Please prioritize for de, ar and zh wikis.";
+"temp-account-alert-read-more-information" = "Information on temporary accounts, $1 is the opening bold, $2 is the closing bold, $3 is the line breaks, $4 is the opening log in link, $5 is the closing. $6 is the opening create an account link, $7 is the opening link for other features.";
 "temp-account-edit-sheet-cta-top" = "Temporary account sheet for editors, log in/sign up.";
 "temp-account-edit-sheet-subtitle" = "Information on temporary accounts, $1 is the temporary username, $2 and $3 are opening and closing bold, $4 is the URL opening tag, and $5 is the closing. $6 is the linebreaks. $7 is the opening for the learn more link.";
 "temp-account-edit-sheet-title" = "Temporary account sheet for editors";
