Voiceover text update according to the feedback

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -332,24 +332,24 @@
 "editor-replace-type-single" = "Replace";
 "editor-replace-type-single-accessibility" = "Replace single instance";
 "editor-title" = "Editor";
-"editor-toolbar-bold-accessibility" = "Bold text formatting";
+"editor-toolbar-bold-accessibility" = "Formatting: Bold";
 "editor-toolbar-cursor-down-accessibility" = "Move cursor down to next line.";
 "editor-toolbar-cursor-next-accessibility" = "Move cursor to next character.";
 "editor-toolbar-cursor-previous-accessibility" = "Move cursor to previous character.";
 "editor-toolbar-cursor-up-accessibility" = "Move cursor up to previous line.";
 "editor-toolbar-find-accessibility" = "Find in page";
-"editor-toolbar-image-accessibility" = "Image text formatting";
-"editor-toolbar-indent-decrease-accessibility" = "Decrease indent text formatting";
-"editor-toolbar-indent-increase-accessibility" = "Increase indent text formatting";
-"editor-toolbar-italics-accessibility" = "Italics text formatting";
-"editor-toolbar-link-accessibility" = "Link text formatting";
-"editor-toolbar-list-ordered-accessibility" = "Ordered list text formatting";
-"editor-toolbar-list-unordered-accessibility" = "Unordered list text formatting";
+"editor-toolbar-image-accessibility" = "Image [button]. Double tap to add an image to the current node.";
+"editor-toolbar-indent-decrease-accessibility" = "Formatting: Decrease indent";
+"editor-toolbar-indent-increase-accessibility" = "Formatting: Increase indent";
+"editor-toolbar-italics-accessibility" = "Formatting: Italics";
+"editor-toolbar-link-accessibility" = "Formatting: Link";
+"editor-toolbar-list-ordered-accessibility" = "Formatting: Ordered list";
+"editor-toolbar-list-unordered-accessibility" = "Formatting: Unordered list";
 "editor-toolbar-open-text-format-menu-accessibility" = "Open text formatting menu";
-"editor-toolbar-reference-accessibility" = "Reference text formatting";
+"editor-toolbar-reference-accessibility" = "Reference [button]";
 "editor-toolbar-show-more-accessibility" = "Show more formatting options";
-"editor-toolbar-template-accessibility" = "Template text formatting";
-"editor-wikitext-loading-accessibility" = "Loading editor text";
+"editor-toolbar-template-accessibility" = "Template [button]. Double tap to add a template to the current node.";
+"editor-wikitext-loading-accessibility" = "Loading editor";
 "editor-wikitext-textview-accessibility" = "Wiki text editor";
 "empty-diff-compare-title" = "No differences between revisions";
 "empty-diff-single-title" = "No viewable changes made";
